--- a/pickups.html
+++ b/pickups.html
@@ -274,8 +274,8 @@
 <tr>
 <td><table><tr>
 <td width=15>2)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Cade Otton/Jake Ferguson</td>
+<td width=50>10/24</td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>2)</td>
@@ -334,7 +334,8 @@ Sam - Emanuel Wilson/MarShawn Lloyd (9/24)<br>
 Steven - Jalen McMillan/Ricky Pearsall (9/25)<br>
 Randy - Cameron Dicker/Matthew Wright (10/22)<br>
 Steven - Ricky Pearsall/Luke Musgrave (10/22)<br>
-Sam - Jauan Jennings/Rashid Shaheed (10/22)
+Sam - Jauan Jennings/Rashid Shaheed (10/22)<br>
+Grant - Darnell Mooney/Brayden Narveson (10/24)
 </td></tr>
 <tr><td width=50>9/10</td>
 <td width=600>
