--- a/roster.html
+++ b/roster.html
@@ -249,8 +249,8 @@
 <tr><td>WAS</td><td>Terry McLaurin         </td></tr>
 <tr><td>CAR</td><td>Diontae Johnson        </td></tr>
 <tr><td height=9></td><td></td></tr>
-<tr><td>DAL</td><td>Jake Ferguson          </td></tr>
 <tr><td>BAL</td><td>Isaiah Likely          </td></tr>
+<tr><td> TB</td><td>Cade Otton             </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> KC</td><td>Harrison Butker        </td></tr>
 <tr><td>PIT</td><td>Chris Boswell          </td></tr>
@@ -278,6 +278,7 @@
 <tr><td>HOU</td><td>Stefon Diggs           </td></tr>
 <tr><td>IND</td><td>Michael Pittman        </td></tr>
 <tr><td>TEN</td><td>DeAndre Hopkins        </td></tr>
+<tr><td>ATL</td><td>Darnell Mooney         </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>BUF</td><td>Dalton Kincaid         </td></tr>
 <tr><td>PIT</td><td>Pat Freiermuth         </td></tr>
@@ -285,7 +286,6 @@
 <tr><td>HOU</td><td>Ka'imi Fairbairn       </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> KC</td><td>Xavier Worthy          </td></tr>
-<tr><td> GB</td><td>Brayden Narveson       </td></tr>
 <tr><td>ATL</td><td>Michael Penix          </td></tr>
 <tr><td>PHI</td><td>Will Shipley           </td></tr>
 </table>
