--- a/week8.html
+++ b/week8.html
@@ -73,7 +73,7 @@
 <tr><td>GWilson</td>       <td></td><td align=right>0</td></tr>
 <tr><td>McBride</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Aubrey</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Coleman</td>       <td></td><td align=right>0</td></tr>
+<tr><td>CWilliams</td>     <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
 </td>
@@ -116,7 +116,7 @@
 <tr><td>McLaurin</td>      <td></td><td align=right>0</td></tr>
 <tr><td>Otton</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Boswell</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Irving</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Daniels</td>       <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
 </td>
