--- a/thousand.html
+++ b/thousand.html
@@ -1233,4 +1233,10 @@
     <td>1000</td>
     <td>States</td>
     <td>655</td></tr>
+<tr><td>2024</td>
+    <td>Week 8</td>
+    <td>Matthew Edwards</td>
+    <td>1000</td>
+    <td>John</td>
+    <td>745</td></tr>
 </table>
