--- a/freeagt.html
+++ b/freeagt.html
@@ -1,25 +1,25 @@
 <table border=0 cellspacing=0 cellpadding=2 width=100><tr>
 <td bgcolor=#802080 valign=center height=3 nowrap rowspan=2 width=705>
-<b><font size=6 color='white'><center>2024 Free Agent Leaderboard<br>(Through week 7)</font></b>&nbsp;&nbsp;</td></tr>
+<b><font size=6 color='white'><center>2024 Free Agent Leaderboard<br>(Through week 8)</font></b>&nbsp;&nbsp;</td></tr>
 </table>
 <table cellspacing=1><tr><td valign=top>
 <table width=260 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=3><font size=5 color='yellow'><center>Quarterbacks</td></tr>
-<tr><td><font size=3>1)</td><td><font size=3>Justin Fields          </td><td><font size=3> 735</td></tr>
-<tr><td><font size=3>2)</td><td><font size=3>Derek Carr             </td><td><font size=3> 715</td></tr>
-<tr><td><font size=3>3)</td><td><font size=3>Trevor Lawrence        </td><td><font size=3> 580</td></tr>
+<tr><td><font size=3>1)</td><td><font size=3>Trevor Lawrence        </td><td><font size=3> 830</td></tr>
+<tr><td><font size=3>2)</td><td><font size=3>Justin Fields          </td><td><font size=3> 735</td></tr>
+<tr><td><font size=3>3)</td><td><font size=3>Derek Carr             </td><td><font size=3> 715</td></tr>
 <tr><td><font size=3>4)</td><td><font size=3>Andy Dalton            </td><td><font size=3> 485</td></tr>
-<tr><td><font size=3>5)</td><td><font size=3>Joe Flacco             </td><td><font size=3> 435</td></tr>
-<tr><td><font size=3>6)</td><td><font size=3>Daniel Jones           </td><td><font size=3> 410</td></tr>
-<tr><td><font size=3>7)</td><td><font size=3>Gardner Minshew        </td><td><font size=3> 350</td></tr>
-<tr><td><font size=3>8)</td><td><font size=3>Will Levis             </td><td><font size=3> 315</td></tr>
-<tr><td><font size=3>9)</td><td><font size=3>Deshaun Watson         </td><td><font size=3> 305</td></tr>
-<tr><td><font size=3>10)</td><td><font size=3>Malik Willis           </td><td><font size=3> 235</td></tr>
-<tr><td><font size=3>11)</td><td><font size=3>Russell Wilson         </td><td><font size=3> 165</td></tr>
-<tr><td><font size=3>12)</td><td><font size=3>Aidan O'Connell        </td><td><font size=3> 130</td></tr>
-<tr><td><font size=3>13)</td><td><font size=3>Taysom Hill            </td><td><font size=3> 100</td></tr>
-<tr><td><font size=3>14)</td><td><font size=3>Tyler Huntley          </td><td><font size=3> 100</td></tr>
-<tr><td><font size=3>15)</td><td><font size=3>Marcus Mariota         </td><td><font size=3> 100</td></tr>
+<tr><td><font size=3>5)</td><td><font size=3>Gardner Minshew        </td><td><font size=3> 475</td></tr>
+<tr><td><font size=3>6)</td><td><font size=3>Daniel Jones           </td><td><font size=3> 450</td></tr>
+<tr><td><font size=3>7)</td><td><font size=3>Joe Flacco             </td><td><font size=3> 435</td></tr>
+<tr><td><font size=3>8)</td><td><font size=3>Jameis Winston         </td><td><font size=3> 335</td></tr>
+<tr><td><font size=3>9)</td><td><font size=3>Will Levis             </td><td><font size=3> 315</td></tr>
+<tr><td><font size=3>10)</td><td><font size=3>Deshaun Watson         </td><td><font size=3> 305</td></tr>
+<tr><td><font size=3>11)</td><td><font size=3>Russell Wilson         </td><td><font size=3> 280</td></tr>
+<tr><td><font size=3>12)</td><td><font size=3>Malik Willis           </td><td><font size=3> 260</td></tr>
+<tr><td><font size=3>13)</td><td><font size=3>Mason Rudolph          </td><td><font size=3> 215</td></tr>
+<tr><td><font size=3>14)</td><td><font size=3>Bryce Young            </td><td><font size=3> 180</td></tr>
+<tr><td><font size=3>15)</td><td><font size=3>Aidan O'Connell        </td><td><font size=3> 130</td></tr>
 </table>
 </td><td valign=top>
 <table width=220 border=2 cellspacing=0 cellpadding=1>
@@ -28,9 +28,10 @@
 <tr><td><font size=3>Dameon Pierce          </td><td><font size=3> 235</td></tr>
 <tr><td><font size=3>Sean Tucker            </td><td><font size=3> 235</td></tr>
 <tr><td><font size=3>DeeJay Dallas          </td><td><font size=3> 200</td></tr>
+<tr><td><font size=3>Roschon Johnson        </td><td><font size=3> 200</td></tr>
 <tr><td><font size=3>Ty Johnson             </td><td><font size=3> 175</td></tr>
 <tr><td><font size=3>Tyler Goodson          </td><td><font size=3> 150</td></tr>
-<tr><td><font size=3>Roschon Johnson        </td><td><font size=3> 150</td></tr>
+<tr><td><font size=3>Ezekiel Elliott        </td><td><font size=3> 100</td></tr>
 <tr><td><font size=3>Antonio Gibson         </td><td><font size=3> 100</td></tr>
 <tr><td><font size=3>Kyle Juszczyk          </td><td><font size=3> 100</td></tr>
 <tr><td><font size=3>Trey Sermon            </td><td><font size=3> 100</td></tr>
@@ -38,68 +39,69 @@
 <tr><td><font size=3>JaMycal Hasty          </td><td><font size=3>  75</td></tr>
 <tr><td><font size=3>Dare Ogunbowale        </td><td><font size=3>  75</td></tr>
 <tr><td><font size=3>Ameer Abdullah         </td><td><font size=3>  50</td></tr>
-<tr><td><font size=3>Ezekiel Elliott        </td><td><font size=3>  50</td></tr>
 </table>
 </td><td valign=top>
 <table width=220 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=2><font size=5 color='yellow'><center>Wide Receivers</td></tr>
+<tr><td><font size=3>Rashid Shaheed         </td><td><font size=3> 735</td></tr>
 <tr><td><font size=3>Allen Lazard           </td><td><font size=3> 570</td></tr>
+<tr><td><font size=3>Calvin Austin          </td><td><font size=3> 495</td></tr>
 <tr><td><font size=3>Alec Pierce            </td><td><font size=3> 450</td></tr>
-<tr><td><font size=3>Darnell Mooney         </td><td><font size=3> 445</td></tr>
+<tr><td><font size=3>Josh Downs             </td><td><font size=3> 425</td></tr>
 <tr><td><font size=3>Rashod Bateman         </td><td><font size=3> 420</td></tr>
-<tr><td><font size=3>Jauan Jennings         </td><td><font size=3> 380</td></tr>
+<tr><td><font size=3>Kalif Raymond          </td><td><font size=3> 410</td></tr>
 <tr><td><font size=3>Dontayvion Wicks       </td><td><font size=3> 360</td></tr>
 <tr><td><font size=3>KaVontae Turpin        </td><td><font size=3> 325</td></tr>
+<tr><td><font size=3>Romeo Doubs            </td><td><font size=3> 310</td></tr>
+<tr><td><font size=3>Cedric Tillman         </td><td><font size=3> 290</td></tr>
 <tr><td><font size=3>Jalen Nailor           </td><td><font size=3> 285</td></tr>
-<tr><td><font size=3>Romeo Doubs            </td><td><font size=3> 275</td></tr>
+<tr><td><font size=3>Courtland Sutton       </td><td><font size=3> 285</td></tr>
 <tr><td><font size=3>Quentin Johnston       </td><td><font size=3> 275</td></tr>
-<tr><td><font size=3>Jordan Addison         </td><td><font size=3> 265</td></tr>
-<tr><td><font size=3>Josh Downs             </td><td><font size=3> 250</td></tr>
-<tr><td><font size=3>Wan'Dale Robinson      </td><td><font size=3> 240</td></tr>
-<tr><td><font size=3>Courtland Sutton       </td><td><font size=3> 235</td></tr>
-<tr><td><font size=3>Darius Slayton         </td><td><font size=3> 210</td></tr>
+<tr><td><font size=3>Jakobi Meyers          </td><td><font size=3> 270</td></tr>
 </table>
 </td></tr><tr><td valign=top>
 <table width=260 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=3><font size=5 color='yellow'><center>Tight Ends</td></tr>
-<tr><td><font size=3>1)</td><td><font size=3>Jonnu Smith            </td><td><font size=3> 175</td></tr>
-<tr><td><font size=3>2)</td><td><font size=3>Hunter Henry           </td><td><font size=3> 170</td></tr>
-<tr><td><font size=3>3)</td><td><font size=3>Brenton Strange        </td><td><font size=3> 155</td></tr>
-<tr><td><font size=3>4)</td><td><font size=3>Foster Moreau          </td><td><font size=3> 150</td></tr>
-<tr><td><font size=3>5)</td><td><font size=3>Cade Otton             </td><td><font size=3> 150</td></tr>
-<tr><td><font size=3>6)</td><td><font size=3>Zach Ertz              </td><td><font size=3> 140</td></tr>
+<tr><td><font size=3>1)</td><td><font size=3>Brenton Strange        </td><td><font size=3> 180</td></tr>
+<tr><td><font size=3>2)</td><td><font size=3>Zach Ertz              </td><td><font size=3> 175</td></tr>
+<tr><td><font size=3>3)</td><td><font size=3>Jonnu Smith            </td><td><font size=3> 175</td></tr>
+<tr><td><font size=3>4)</td><td><font size=3>Tyler Conklin          </td><td><font size=3> 170</td></tr>
+<tr><td><font size=3>5)</td><td><font size=3>Hunter Henry           </td><td><font size=3> 170</td></tr>
+<tr><td><font size=3>6)</td><td><font size=3>Foster Moreau          </td><td><font size=3> 150</td></tr>
 <tr><td><font size=3>7)</td><td><font size=3>Elijah Higgins         </td><td><font size=3> 125</td></tr>
-<tr><td><font size=3>8)</td><td><font size=3>Tyler Conklin          </td><td><font size=3> 120</td></tr>
-<tr><td><font size=3>9)</td><td><font size=3>Chig Okonkwo           </td><td><font size=3> 100</td></tr>
-<tr><td><font size=3>10)</td><td><font size=3>Noah Fant              </td><td><font size=3>  90</td></tr>
-<tr><td><font size=3>11)</td><td><font size=3>Charlie Kolar          </td><td><font size=3>  80</td></tr>
-<tr><td><font size=3>12)</td><td><font size=3>Jordan Akins           </td><td><font size=3>  75</td></tr>
-<tr><td><font size=3>13)</td><td><font size=3>Mo Alie-Cox            </td><td><font size=3>  75</td></tr>
-<tr><td><font size=3>14)</td><td><font size=3>Connor Heyward         </td><td><font size=3>  75</td></tr>
-<tr><td><font size=3>15)</td><td><font size=3>Juwan Johnson          </td><td><font size=3>  75</td></tr>
+<tr><td><font size=3>8)</td><td><font size=3>Adam Trautman          </td><td><font size=3> 115</td></tr>
+<tr><td><font size=3>9)</td><td><font size=3>Dawson Knox            </td><td><font size=3> 100</td></tr>
+<tr><td><font size=3>10)</td><td><font size=3>Chig Okonkwo           </td><td><font size=3> 100</td></tr>
+<tr><td><font size=3>11)</td><td><font size=3>Josh Oliver            </td><td><font size=3> 100</td></tr>
+<tr><td><font size=3>12)</td><td><font size=3>Noah Fant              </td><td><font size=3>  90</td></tr>
+<tr><td><font size=3>13)</td><td><font size=3>Jake Ferguson          </td><td><font size=3>  80</td></tr>
+<tr><td><font size=3>14)</td><td><font size=3>Mike Gesicki           </td><td><font size=3>  80</td></tr>
+<tr><td><font size=3>15)</td><td><font size=3>Charlie Kolar          </td><td><font size=3>  80</td></tr>
 </table>
 </td><td valign=top>
 <table width=220 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=2><font size=5 color='yellow'><center>Kickers</td></tr>
-<tr><td><font size=3>Wil Lutz               </td><td><font size=3> 725</td></tr>
-<tr><td><font size=3>Cameron Dicker         </td><td><font size=3> 630</td></tr>
-<tr><td><font size=3>Daniel Carlson         </td><td><font size=3> 525</td></tr>
-<tr><td><font size=3>Blake Grupe            </td><td><font size=3> 505</td></tr>
-<tr><td><font size=3>Dustin Hopkins         </td><td><font size=3> 500</td></tr>
-<tr><td><font size=3>Nick Folk              </td><td><font size=3> 455</td></tr>
-<tr><td><font size=3>Cairo Santos           </td><td><font size=3> 450</td></tr>
-<tr><td><font size=3>Joey Slye              </td><td><font size=3> 430</td></tr>
-<tr><td><font size=3>Jake Bates             </td><td><font size=3> 425</td></tr>
-<tr><td><font size=3>Matt Gay               </td><td><font size=3> 370</td></tr>
-<tr><td><font size=3>Eddy Pineiro           </td><td><font size=3> 355</td></tr>
-<tr><td><font size=3>Greg Joseph            </td><td><font size=3> 340</td></tr>
+<tr><td><font size=3>Wil Lutz               </td><td><font size=3> 745</td></tr>
+<tr><td><font size=3>Daniel Carlson         </td><td><font size=3> 625</td></tr>
+<tr><td><font size=3>Dustin Hopkins         </td><td><font size=3> 605</td></tr>
+<tr><td><font size=3>Blake Grupe            </td><td><font size=3> 595</td></tr>
+<tr><td><font size=3>Jake Bates             </td><td><font size=3> 520</td></tr>
+<tr><td><font size=3>Greg Joseph            </td><td><font size=3> 480</td></tr>
+<tr><td><font size=3>Nick Folk              </td><td><font size=3> 465</td></tr>
+<tr><td><font size=3>Joey Slye              </td><td><font size=3> 460</td></tr>
+<tr><td><font size=3>Matt Gay               </td><td><font size=3> 455</td></tr>
+<tr><td><font size=3>Cairo Santos           </td><td><font size=3> 455</td></tr>
+<tr><td><font size=3>Eddy Pineiro           </td><td><font size=3> 365</td></tr>
+<tr><td><font size=3>Chad Ryland            </td><td><font size=3> 330</td></tr>
+<tr><td><font size=3>Greg Zuerlein          </td><td><font size=3> 310</td></tr>
 <tr><td><font size=3>Matt Prater            </td><td><font size=3> 295</td></tr>
-<tr><td><font size=3>Greg Zuerlein          </td><td><font size=3> 285</td></tr>
-<tr><td><font size=3>Chad Ryland            </td><td><font size=3> 230</td></tr>
+<tr><td><font size=3>Anders Carlson         </td><td><font size=3> 245</td></tr>
 </table>
 </td><td valign=top>
 <table width=220 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=2><font size=5 color='yellow'><center>Rookies</td></tr>
+<tr><td><font size=3>Brayden Narveson       </td><td><font size=3> 475</td></tr>
+<tr><td><font size=3>Jalen Coker            </td><td><font size=3> 140</td></tr>
 <tr><td><font size=3>AJ Barner              </td><td><font size=3>  75</td></tr>
 <tr><td><font size=3>Troy Franklin          </td><td><font size=3>  75</td></tr>
 <tr><td><font size=3>Bub Means              </td><td><font size=3>  75</td></tr>
@@ -107,12 +109,10 @@
 <tr><td><font size=3>Ja'Lynn Polk           </td><td><font size=3>  50</td></tr>
 <tr><td><font size=3>Ben Sinnott            </td><td><font size=3>  50</td></tr>
 <tr><td><font size=3>Devaughn Vele          </td><td><font size=3>  35</td></tr>
-<tr><td><font size=3>Jalen Coker            </td><td><font size=3>  30</td></tr>
 <tr><td><font size=3>Ja'Tavion Sanders      </td><td><font size=3>  30</td></tr>
 <tr><td><font size=3>Jacob Cowing           </td><td><font size=3>  25</td></tr>
 <tr><td><font size=3>Audric Estime          </td><td><font size=3>   0</td></tr>
 <tr><td><font size=3>MarShawn Lloyd         </td><td><font size=3>   0</td></tr>
 <tr><td><font size=3>Luke McCaffrey         </td><td><font size=3>   0</td></tr>
-<tr><td><font size=3>Ricky Pearsall         </td><td><font size=3>   0</td></tr>
 </table>
 </td></tr></table>
