--- a/pickups.html
+++ b/pickups.html
@@ -335,7 +335,8 @@ Steven - Jalen McMillan/Ricky Pearsall (9/25)<br>
 Randy - Cameron Dicker/Matthew Wright (10/22)<br>
 Steven - Ricky Pearsall/Luke Musgrave (10/22)<br>
 Sam - Jauan Jennings/Rashid Shaheed (10/22)<br>
-Grant - Darnell Mooney/Brayden Narveson (10/24)
+Grant - Darnell Mooney/Brayden Narveson (10/24)<br>
+Grant - Keaton Mitchell/Stefon Diggs (10/30)
 </td></tr>
 <tr><td width=50>9/10</td>
 <td width=600>
