--- a/roster.html
+++ b/roster.html
@@ -247,7 +247,7 @@
 <tr><td>CHI</td><td>DJ Moore               </td></tr>
 <tr><td>BAL</td><td>Zay Flowers            </td></tr>
 <tr><td>WAS</td><td>Terry McLaurin         </td></tr>
-<tr><td>CAR</td><td>Diontae Johnson        </td></tr>
+<tr><td>BAL</td><td>Diontae Johnson        </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>BAL</td><td>Isaiah Likely          </td></tr>
 <tr><td> TB</td><td>Cade Otton             </td></tr>
@@ -273,11 +273,11 @@
 <tr><td>CHI</td><td>D'Andre Swift          </td></tr>
 <tr><td>WAS</td><td>Austin Ekeler          </td></tr>
 <tr><td> LV</td><td>Alexander Mattison     </td></tr>
+<tr><td>BAL</td><td>Keaton Mitchell        </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> TB</td><td>Mike Evans             </td></tr>
-<tr><td>HOU</td><td>Stefon Diggs           </td></tr>
 <tr><td>IND</td><td>Michael Pittman        </td></tr>
-<tr><td>TEN</td><td>DeAndre Hopkins        </td></tr>
+<tr><td> KC</td><td>DeAndre Hopkins        </td></tr>
 <tr><td>ATL</td><td>Darnell Mooney         </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>BUF</td><td>Dalton Kincaid         </td></tr>
