--- a/roster.html
+++ b/roster.html
@@ -8,7 +8,7 @@
 <table border=0 cellspacing=0 width=204>
 <tr><td bgcolor=#B3B3B3 colspan=2><font color='purple'><b>States (1)</b></font></td></tr>
 <tr><td>IND</td><td>Anthony Richardson     </td></tr>
-<tr><td>NYJ</td><td>Aaron Rodgers          </td></tr>
+<tr><td>IND</td><td>Joe Flacco             </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> SF</td><td>Christian McCaffrey    </td></tr>
 <tr><td>JAX</td><td>Travis Etienne         </td></tr>
@@ -281,7 +281,7 @@
 <tr><td>ATL</td><td>Darnell Mooney         </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>BUF</td><td>Dalton Kincaid         </td></tr>
-<tr><td>PIT</td><td>Pat Freiermuth         </td></tr>
+<tr><td>DAL</td><td>Jake Ferguson          </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>HOU</td><td>Ka'imi Fairbairn       </td></tr>
 <tr><td height=9></td><td></td></tr>
