--- a/pickups.html
+++ b/pickups.html
@@ -6,8 +6,8 @@
 <tr>
 <td><table><tr>
 <td width=15>1)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Joe Flacco/Aaron Rodgers</td>
+<td width=50>11/3</td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>1)</td>
@@ -279,8 +279,8 @@
 </tr></table></td>
 <td><table><tr>
 <td width=15>2)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Jake Ferguson/Pat Freiermuth</td>
+<td width=50>11/3</td>
 </tr></table></td>
 </tr>
 <tr>
