--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
 <a href="week6.html"><b>6</b></a>
 <a href="week7.html"><b>7</b></a>
 <a href="week8.html"><b>8</b></a>
-<a href="week9.html"><b>9P</b></a><br>
+<a href="week9.html"><b>9</b></a>
+<a href="week10.html"><b>10P</b></a><br>
 <a href="roster.html"><b>Roster</b></a><br>
 <a href="pickups.html"><b>Pickups & Trades</b></a><br>
 <a href="leader.html"><b>Current Leaderboard</b></a><br>
@@ -68,43 +69,43 @@
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Weeks Won</b></font></td></tr>
 <tr><td><font size=2>John(9)</font></td>
     <td><font size=2>4</font></td>
-    <td><font size=2>4</font></td>
-    <td><font size=2>5795</font></td>
-    <td><font size=2>5220</font></td>
+    <td><font size=2>5</font></td>
+    <td><font size=2>6470</font></td>
+    <td><font size=2>6000</font></td>
     <td><font size=2>885</font></td>
     <td><font size=2>375</font></td>
     <td><font size=2>3</font></td>
-<tr><td><font size=2>States(1)</font></td>
-    <td><font size=2>4</font></td>
-    <td><font size=2>4</font></td>
-    <td><font size=2>4040</font></td>
-    <td><font size=2>4325</font></td>
-    <td><font size=2>680</font></td>
-    <td><font size=2>340</font></td>
-    <td><font size=2>0</font></td>
-<tr><td><font size=2>Sam(7)</font></td>
-    <td><font size=2>3</font></td>
-    <td><font size=2>5</font></td>
-    <td><font size=2>5250</font></td>
-    <td><font size=2>5505</font></td>
-    <td><font size=2>750</font></td>
-    <td><font size=2>410</font></td>
-    <td><font size=2>0</font></td>
 <tr><td><font size=2>Randy(5)</font></td>
-    <td><font size=2>3</font></td>
+    <td><font size=2>4</font></td>
     <td><font size=2>5</font></td>
-    <td><font size=2>4700</font></td>
-    <td><font size=2>5150</font></td>
+    <td><font size=2>5465</font></td>
+    <td><font size=2>5845</font></td>
     <td><font size=2>960</font></td>
     <td><font size=2>295</font></td>
     <td><font size=2>1</font></td>
 <tr><td><font size=2>Mike(3)</font></td>
-    <td><font size=2>3</font></td>
+    <td><font size=2>4</font></td>
     <td><font size=2>5</font></td>
-    <td><font size=2>4515</font></td>
-    <td><font size=2>4695</font></td>
+    <td><font size=2>5160</font></td>
+    <td><font size=2>5065</font></td>
     <td><font size=2>750</font></td>
     <td><font size=2>370</font></td>
+    <td><font size=2>0</font></td>
+<tr><td><font size=2>States(1)</font></td>
+    <td><font size=2>4</font></td>
+    <td><font size=2>5</font></td>
+    <td><font size=2>4295</font></td>
+    <td><font size=2>4700</font></td>
+    <td><font size=2>680</font></td>
+    <td><font size=2>255</font></td>
+    <td><font size=2>0</font></td>
+<tr><td><font size=2>Sam(7)</font></td>
+    <td><font size=2>3</font></td>
+    <td><font size=2>6</font></td>
+    <td><font size=2>5660</font></td>
+    <td><font size=2>6070</font></td>
+    <td><font size=2>750</font></td>
+    <td><font size=2>410</font></td>
     <td><font size=2>0</font></td>
 <tr><td><font size=2></font></td>
     <td><font size=2></font></td>
@@ -115,42 +116,42 @@
     <td><font size=2></font></td>
     <td><font size=2></font></td></tr>
 <tr><td><font size=2>Roger(2)</font></td>
-    <td><font size=2>7</font></td>
+    <td><font size=2>8</font></td>
     <td><font size=2>1</font></td>
-    <td><font size=2>5885</font></td>
-    <td><font size=2>4530</font></td>
+    <td><font size=2>6260</font></td>
+    <td><font size=2>4785</font></td>
     <td><font size=2>895</font></td>
-    <td><font size=2>470</font></td>
+    <td><font size=2>375</font></td>
     <td><font size=2>1</font></td>
 <tr><td><font size=2>Grant(10)</font></td>
-    <td><font size=2>6</font></td>
+    <td><font size=2>7</font></td>
     <td><font size=2>2</font></td>
-    <td><font size=2>5910</font></td>
-    <td><font size=2>5045</font></td>
+    <td><font size=2>6690</font></td>
+    <td><font size=2>5720</font></td>
     <td><font size=2>1245</font></td>
     <td><font size=2>410</font></td>
-    <td><font size=2>2</font></td>
+    <td><font size=2>3</font></td>
 <tr><td><font size=2>Steven(8)</font></td>
     <td><font size=2>4</font></td>
-    <td><font size=2>4</font></td>
-    <td><font size=2>4835</font></td>
-    <td><font size=2>4525</font></td>
+    <td><font size=2>5</font></td>
+    <td><font size=2>5530</font></td>
+    <td><font size=2>5290</font></td>
     <td><font size=2>805</font></td>
     <td><font size=2>440</font></td>
     <td><font size=2>0</font></td>
 <tr><td><font size=2>Rich(6)</font></td>
-    <td><font size=2>3</font></td>
+    <td><font size=2>4</font></td>
     <td><font size=2>5</font></td>
-    <td><font size=2>4260</font></td>
-    <td><font size=2>4560</font></td>
+    <td><font size=2>4825</font></td>
+    <td><font size=2>4970</font></td>
     <td><font size=2>790</font></td>
     <td><font size=2>320</font></td>
     <td><font size=2>0</font></td>
 <tr><td><font size=2>Matthew(4)</font></td>
     <td><font size=2>3</font></td>
-    <td><font size=2>5</font></td>
-    <td><font size=2>4025</font></td>
-    <td><font size=2>5660</font></td>
+    <td><font size=2>6</font></td>
+    <td><font size=2>4395</font></td>
+    <td><font size=2>6305</font></td>
     <td><font size=2>1000</font></td>
     <td><font size=2>245</font></td>
     <td><font size=2>1</font></td>
